--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://youtu.be/Aba5LLPvd_o">
+<meta http-equiv="refresh" content="0; url=https://youtu.be/vrOdqTF2Ock?si=QJ5gWnfN6LN78oNs">
